k8s/jobs.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jobs
  template:
    metadata:
      labels:
        app: jobs
    spec:
      containers:
        - name: jobs
          image: sravanthi/jobs-service:latest   # Change to your Docker image name
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: jobs-service
spec:
  selector:
    app: jobs
  ports:
    - port: 5003
      targetPort: 5003
  type: ClusterIP
