k8s/resumes.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumes-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resumes
  template:
    metadata:
      labels:
        app: resumes
    spec:
      containers:
        - name: resumes
          image: sravanthi/resumes-service:latest   # Change to your Docker image name
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: resumes-service
spec:
  selector:
    app: resumes
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
