k8s/users.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: sravanthi/users-service:latest   # Change to your Docker image name
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
