k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-recommender-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: job-recommender.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 5001
          - path: /api/resumes
            pathType: Prefix
            backend:
              service:
                name: resumes-service
                port:
                  number: 5002
          - path: /api/jobs
            pathType: Prefix
            backend:
              service:
                name: jobs-service
                port:
                  number: 5003
